Fix transaction problems.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,7 @@ server.port=8090
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=admin
 spring.datasource.password=secret
+
+spring.datasource.hikari.pool-name= pool-hikari
+spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.connection-timeout= 30000
